@@ -1,3 +1,7 @@
+Jun 7/2018 : v0.20 released
+  - fix : s7 addressing bug
+  - new : click on image to select row in data table
+
 May 30/2018 : v0.19 released
   - new : added capture duration (or continous)
   - new : added .dat files (load/save captured data)
